# backend/src/controllers/project.controller.ts
@@ -1,12 +1,26 @@
-import { Get, Route, Post, Body, Path, Put } from 'tsoa';
 import projectService, { ProjectReqDTO, ProjectRespDTO } from '../services/project.service';
+import jwt from 'jsonwebtoken';
+import { Get, Route, Post, Body, Path, Put, Query, Request } from 'tsoa';
+import { Request as ExpressRequest } from 'express';
 
 @Route('projects')
 export class ProjectController {
 
     @Get('/')
-    public async getAllProjects(): Promise<ProjectRespDTO[]> {
-        return projectService.getAllProjects();
+    public async getAllProjects(@Request() req: ExpressRequest): Promise<ProjectRespDTO[]> {
+        
+        const authHeader = req.headers.authorization;
+
+        let userShare: number | undefined;
+
+        if (authHeader) {
+            // Decode the token to get the userShare
+            const token = authHeader.split(' ')[1]; // Extract Bearer token
+            const decodedToken: any = jwt.verify(token, 'your_jwt_secret');
+            userShare = decodedToken.userShare;
+        }
+
+        return projectService.getAllProjects(userShare);
     }
 
     @Get('{id}')
@@ -14,10 +28,11 @@ export class ProjectController {
         return projectService.getProjectById(id);
     }
 
-    @Get('/Entity/{id}')
-    public async getProjectsByEntityId(@Path() id: number): Promise<ProjectRespDTO[] | null> {
-        return projectService.getProjectsByEntityId(id);
-    }
+    @Get('/Entity')
+    public async getProjectsByEntityId(@Query() entityIds: string): Promise<ProjectRespDTO[] | null> {
+        const ids = entityIds.split(',').map(Number);
+        return projectService.getProjectsByEntityIds(ids);
+    }    
 
     @Post('/')
     public async createProject(@Body() project: ProjectReqDTO): Promise<ProjectRespDTO | null> {
@@ -34,6 +49,7 @@ export class ProjectController {
             maturityLockingPeriod?: number,
             ownerName?: string,
             settings?: { [key: string]: any }
+            file?:string;
         }
     ): Promise<ProjectRespDTO | null> {
         const updatedProjectDetails = projectService.updateProject(id, updateData);
